Frist Triangle Rendered

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(glfw3 3.3 REQUIRED)
 add_executable(VoxelGame 
     src/main.cpp 
     src/common.cpp
+    src/chunk.cpp
     3rd-party/glad.c)
 target_link_libraries(VoxelGame glfw)
 target_include_directories(VoxelGame PRIVATE ${PROJECT_SOURCE_DIR}/3rd-party ${PROJECT_SOURCE_DIR}/include)
