--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ add_executable(VoxelGame
     src/common.cpp
     src/chunk.cpp
     src/chunkManager.cpp
+    src/terrain.cpp
     3rd-party/glad.c)
-target_link_libraries(VoxelGame glfw)
+    
+target_link_libraries(VoxelGame glfw /usr/local/lib/libnoise.a)
 target_include_directories(VoxelGame PRIVATE ${PROJECT_SOURCE_DIR}/3rd-party ${PROJECT_SOURCE_DIR}/include)
