Code will now be vendored

--- a/3rd-party/CMakeLists.txt
+++ b/3rd-party/CMakeLists.txt
@@ -6,4 +6,8 @@ target_include_directories(glad PRIVATE ${THIRD_PARTY_INCLUDE_DIR})
 # Other Libraries
 add_subdirectory(glm)
 add_subdirectory(glfw)
+
+set(BUILD_SHARED_LIBS ON)
+set(BUILD_LIBNOISE_UTILS ON)
+set(BUILD_LIBNOISE_EXAMPLES ON)
 add_subdirectory(libnoise)
