--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3rd-party/libnoise"]
 	path = 3rd-party/libnoise
 	url = https://github.com/qknight/libnoise.git
+[submodule "3rd-party/glm"]
+	path = 3rd-party/glm
+	url = https://github.com/g-truc/glm.git
